syntax error fixed

--- a/src/app/components/gallery/_components/gallery-image/gallery-image.component.html
+++ b/src/app/components/gallery/_components/gallery-image/gallery-image.component.html
@@ -3,6 +3,6 @@
     <span>Title</span>
     <mat-icon aria-hidden="false" aria-label="share">thumbs-up</mat-icon>
   </mat-card-title>
-  {{ image | json }}
+  <!-- {{ image | json }} -->
   <img mat-card-image [src]="image.cropped_picture" alt="Image description">
 </mat-card>
