update dialog details modal logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -146,9 +146,9 @@
   }
 
   .container {
-    width: 100%;
+    width: calc(100% - 40px);
     max-width: 1200px;
-    padding: 40px 0;
+    padding: 40px 20px;
   }
 
 
