--- a/src/app/components/gallery/_components/gallery-image/gallery-image.component.html
+++ b/src/app/components/gallery/_components/gallery-image/gallery-image.component.html
@@ -1,8 +1,13 @@
-<mat-card class="card-image" (click)="openImageDialog(image)">
+<mat-card class="card-image">
   <mat-card-title>
     <span>Title</span>
-    <mat-icon aria-hidden="false" aria-label="share">thumbs-up</mat-icon>
+
+    <button mat-icon-button color="primary" aria-label="Elove it" class="gallery__button">
+      <mat-icon>favorite</mat-icon>
+    </button>
   </mat-card-title>
-  <!-- {{ image | json }} -->
-  <img mat-card-image [src]="image.cropped_picture" alt="Image description">
+
+  <mat-card-subtitle>Sub title</mat-card-subtitle>
+
+  <img (click)="openImageDialog(image)" mat-card-image [src]="image.cropped_picture" class="gallery__image" alt="Image description">
 </mat-card>
