--- a/src/app/components/dialog-image/dialog-image.component.html
+++ b/src/app/components/dialog-image/dialog-image.component.html
@@ -1,1 +1,17 @@
-<img [src]="galleryImage.full_picture" [alt]="galleryImage.author">
+<mat-card class="card">
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image">
+      <mat-icon>star</mat-icon>
+    </div>
+
+    <mat-card-title>This is an awesome image</mat-card-title>
+
+    <mat-card-subtitle>{{ galleryImage.author }}</mat-card-subtitle>
+  </mat-card-header>
+
+  <img mat-card-image [src]="galleryImage.full_picture" [alt]="galleryImage.author">
+
+  <mat-card-content>
+    <p><strong>{{ galleryImage.tags }}</strong></p>
+  </mat-card-content>
+</mat-card>
